Fix address overlapping balance on mobile

--- a/src/main/client/javascript/components/wallet/WalletAccountListItem.less
+++ b/src/main/client/javascript/components/wallet/WalletAccountListItem.less
@@ -44,3 +44,13 @@
     }
 
 }
+
+// Extra small devices (portrait phones, less than 576px)
+@media screen and (max-width: 599px) {
+
+    .wallet-account-list-item {
+        .account-address {
+            word-wrap: break-word;
+        }
+    }
+}
